--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -1,33 +1,20 @@
 .footer {
-    padding-top: 50px;
-    &__wrapper {
-    }
-
-    &__container {
-    }
+    padding-top: rem(50);
 
     &__top {
-    }
-
-    &__flex {
-        display: flex;
         justify-content: space-between;
-        margin: 0px -10px;
-        @include adaptiv-value("margin-bottom", 40, 0, 1);
-        @media (max-width: $md3+px) {
-            flex-wrap: wrap;
+        display: grid;
+        grid-template-columns: repeat(4, rem(260));
+        gap: rem(20);
+        @include adaptiveValue("margin-bottom", 75, 35);
+        @media (max-width: em(1170)) {
+            grid-template-columns: repeat(4, 1fr);
         }
-    }
-
-    &__column {
-        padding: 0px 10px;
-        flex: 0 1 260px;
-        @include adaptiv-value("margin-bottom", 35, 20, 1);
-        @media (max-width: $md3+px) {
-            flex: 0 1 50%;
+        @media (max-width: em(850)) {
+            grid-template-columns: repeat(2, 1fr);
         }
-        @media (max-width: $md4+px) {
-            flex: 1 1 100%;
+        @media (max-width: $mobileSmall) {
+            grid-template-columns: 1fr;
         }
     }
 
@@ -35,22 +22,23 @@
     }
 
     &__label {
-        @extend .p_lead;
-        font-weight: 700;
+        @extend %p-lead_bold;
+        transition: color 0.5s ease 0s;
         span {
             display: none;
             transition: all 0.5s ease 0s;
             svg {
-                width: 20px;
-                height: 20px;
+                width: rem(20);
+                height: rem(20);
             }
         }
-        &._active {
+        &._spoller-active {
+            color: $blue;
             span {
                 transform: rotate(-180deg);
             }
         }
-        @media (max-width: $md4+px) {
+        @media (max-width: $mobileSmall) {
             display: flex;
             justify-content: space-between;
             span {
@@ -60,16 +48,16 @@
     }
 
     &__list {
-        @include adaptiv-value("padding-top", 25, 20, 1);
+        @include adaptiveValue("padding-top", 25, 20);
         li {
             &:not(:last-child) {
-                margin: 0px 0px 10px 0px;
+                margin-bottom: rem(10);
             }
         }
     }
 
     &__link {
-        @extend .p;
+        @extend %p;
         color: $text_1;
         transition: all 0.3s ease 0s;
         @media (any-hover: hover) {
@@ -80,26 +68,30 @@
     }
 
     &__bottom {
-        border-top: 1px solid $light;
-        box-shadow: 1px 4px 44px rgba(0, 0, 0, 0.03);
-    }
-
-    &__bottom-wrap {
+        border-top: rem(1) solid $light;
+        box-shadow: rem(1) rem(4) rem(44) rgba(0, 0, 0, 0.03);
         display: flex;
         align-items: center;
         justify-content: space-between;
-        @include adaptiv-value("padding-top", 30, 20, 1);
-        @include adaptiv-value("padding-bottom", 30, 20, 1);
-        @media (max-width: $md4+px) {
+        @include adaptiveValue("padding-top", 30, 20);
+        @include adaptiveValue("padding-bottom", 30, 20);
+        @media (max-width: $mobileSmall) {
             flex-wrap: wrap;
             justify-content: center;
             text-align: center;
         }
     }
+
     &__copy {
-        @extend .p;
+        @extend %p;
         color: $text_3;
-        @media (max-width: $md4+px) {
+        transition: color 0.3s ease 0s;
+        @media (any-hover: hover) {
+            &:hover {
+                color: $blue;
+            }
+        }
+        @media (max-width: $mobileSmall) {
             flex: 1 1 100%;
             order: 2;
         }
@@ -108,30 +100,32 @@
     &__social {
         display: flex;
         align-items: center;
-        @media (min-width: 1300px) {
-            @include adaptiv-value("margin-right", 140, 10, 1);
+        gap: rem(10);
+        @media (min-width: em(1300)) {
+            @include adaptiveValue("margin-right", 140, 10);
         }
-        @media (max-width: $md4+px) {
+        @media (max-width: $mobileSmall) {
             flex: 1 1 100%;
             order: 1;
             justify-content: center;
-            margin-bottom: 10px;
+            margin-bottom: rem(10);
         }
     }
 
     &__social-item {
-        flex: 0 0 18px;
-        transition: all 0.3s ease 0s;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex: 0 0 rem(18);
+        width: rem(18);
+        transition: filter 0.3s ease 0s;
+        img {
+            max-width: 100%;
+        }
         @media (any-hover: hover) {
             &:hover {
                 filter: grayscale(1);
             }
-        }
-        &:not(:last-child) {
-            margin-right: 10px;
-        }
-        img {
-            max-width: 100%;
         }
     }
 }
