--- a/src/scss/base/forms/checkbox.scss
+++ b/src/scss/base/forms/checkbox.scss
@@ -1,8 +1,5 @@
 .checkbox {
     position: relative;
-    &:not(:last-child) {
-        margin-bottom: em(5);
-    }
     // .checkbox__input
     &__input {
         position: absolute;
@@ -10,10 +7,15 @@
         height: 0;
         opacity: 0;
         &:focus + .checkbox__label:before {
-            box-shadow: 0 0 5px #000;
         }
         &:checked + .checkbox__label:before {
-            background: #000;
+            position: absolute;
+            left: rem(2);
+            top: rem(5);
+            width: rem(12);
+            height: rem(12);
+            background-color: $secondary;
+            border-radius: rem(2);
         }
     }
     // .checkbox__label
@@ -22,80 +24,46 @@
         display: inline-flex;
         align-items: center;
         position: relative;
-        gap: 10px;
+        gap: rem(10);
         &:before {
             content: "";
-            align-self: flex-start;
-            flex: 0 0 20px;
-            width: 20px;
-            height: 20px;
-            border: 1px solid #a7a9ac;
+            flex: 0 0 rem(12);
         }
     }
+
     // .checkbox__text
     &__text {
-    }
-}
-
-//========================================================================================================================================================
-
-.checkbox {
-    position: relative;
-    // .checkbox__input
-    &__input {
-        position: absolute;
-        width: 0;
-        height: 0;
-        opacity: 0;
-        visibility: hidden;
-        &:checked + .checkbox__text:before {
-        }
-        &:checked + .checkbox__text:after {
-            content: "";
-            position: absolute;
-            left: 2px;
-            top: 5px;
-            width: 12px;
-            height: 12px;
-            background-color: $secondary;
-            border-radius: 2px;
-        }
-    }
-    // .checkbox__text
-    &__text {
-        display: inline-flex;
-        align-items: center;
-        position: relative;
-        @extend .p;
-        cursor: pointer;
-        transition: all 0.3s ease 0s;
+        @extend %p;
         color: $secondary;
+        &:before {
+            content: "";
+            position: relative;
+            align-self: flex-start;
+            margin-right: rem(15);
+            flex: 0 0 rem(16);
+            left: 0;
+            top: rem(3);
+            width: rem(16);
+            height: rem(16);
+            background: $white;
+            border: rem(1) solid $secondary;
+            border-radius: rem(3);
+            overflow: hidden;
+        }
         @media (any-hover: hover) {
             &:hover {
                 color: $blue;
             }
         }
-        &:before {
-            content: "";
-            position: relative;
-            align-self: flex-start;
-            margin-right: 15px;
-            flex: 0 0 16px;
-            left: 0;
-            top: 3px;
-            width: 16px;
-            height: 16px;
-            background: $white;
-            border: 1px solid $secondary;
-            border-radius: 3px;
-            overflow: hidden;
-        }
     }
+
     &._error {
         .checkbox__text {
             &:before {
-                border: 1px solid $error;
+                border: rem(1) solid $error;
             }
         }
     }
 }
+
+//========================================================================================================================================================
