--- a/src/scss/base/forms/forms.scss
+++ b/src/scss/base/forms/forms.scss
@@ -1,49 +1,15 @@
-//<FORM>
-// Снипет (HTML):
-.form {
-	&__row {
-	}
-	&__column {
-	}
-	&__line {
-	}
-	&__input {
-	}
-	&__button {
-	}
-	&__error {
-	}
-}
-//</FORM>
-
 // <BUTTONS>
 // Снипет (HTML): btn
-// @import "button";
+@import "button";
 
 // <INPUTS>
 // Снипет (HTML): inp
-// @import "input";
+@import "input";
 
 // <CHECK>
 // Снипет (HTML): chk
-// @import "checkbox";
-
-// <RADIO>
-// Снипет (HTML): opt
-// @import "radio";
-
-// <SELECT>
-// Снипет (HTML): sel
-// @import "select";
-
-// <RATING>
-// Снипет (HTML): rating
-// @import "rating";
+@import "checkbox";
 
 // <QUANTITY>
 // Снипет (HTML): qa
 // @import "quantity";
-
-// <RANGE>
-// Снипет (HTML):
-// @import "range";
