--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -53,7 +53,7 @@
 h1,
 %h1 {
     font-weight: 700;
-    @include adaptiveValue("font-size", 45, 25);
+    @include adaptiveValue("font-size", 45, 25, 1640, 767.98, 1);
     line-height: math.div(54, 45);
     letter-spacing: -0.0088em;
 }
@@ -61,7 +61,7 @@ h1,
 h2,
 %h2 {
     font-weight: 700;
-    @include adaptiveValue("font-size", 35, 25);
+    @include adaptiveValue("font-size", 35, 25, 1640, 767.98, 1);
     line-height: math.div(44, 35);
     letter-spacing: -0.0068em;
 }
@@ -69,21 +69,21 @@ h2,
 h3,
 %h3 {
     font-weight: 600;
-    @include adaptiveValue("font-size", 30, 20);
+    @include adaptiveValue("font-size", 30, 20, 1640, 767.98, 1);
     line-height: math.div(39, 30);
     letter-spacing: -0.0058em;
 }
 
 h4,
 %h4 {
-    @include adaptiveValue("font-size", 25, 18);
+    @include adaptiveValue("font-size", 25, 18, 1640, 767.98, 1);
     line-height: math.div(34, 25);
     letter-spacing: -0.0058em;
 }
 
 h5,
 %h5 {
-    @include adaptiveValue("font-size", 18, 15);
+    @include adaptiveValue("font-size", 18, 15, 1640, 767.98, 1);
     line-height: math.div(27, 18);
     letter-spacing: -0.0035em;
 }
@@ -106,7 +106,7 @@ h6,
 }
 
 %p-lead {
-    @include adaptiveValue("font-size", 20, 18);
+    @include adaptiveValue("font-size", 20, 18, 1640, 767.98, 1);
     line-height: math.div(29, 20);
     letter-spacing: -0.0033em;
 }
