--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -109,6 +109,7 @@ body {
 
 // Подключение стилей отдельных страниц
 @import "_pages/home";
+@import "_pages/single";
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
