--- a/src/scss/_pages/single.scss
+++ b/src/scss/_pages/single.scss
@@ -9,23 +9,26 @@
         max-width: rem(670);
     }
 
-    &__grid {
-        display: grid;
-        grid-template-columns: repeat(4, 1fr);
+    &__body {
+        display: flex;
         gap: rem(20);
         @media (max-width: $tablet) {
-            grid-template-columns: repeat(4, 30%);
             overflow: auto;
-        }
-        @media (max-width: $mobile) {
-            grid-template-columns: repeat(4, 45%);
-        }
-        @media (max-width: $mobileSmall) {
-            grid-template-columns: repeat(4, 80%);
+            @include scrollbars(rem(10), $blue, $white, true);
         }
     }
 
     &__item {
+        flex: 0 0 rem(360);
+        @media (max-width: $tablet) {
+            flex: 0 0 30%;
+        }
+        @media (max-width: $mobile) {
+            flex: 0 0 45%;
+        }
+        @media (max-width: $mobileSmall) {
+            flex: 0 0 80%;
+        }
     }
 }
 // </SINGLE WORKSHOP>=======================================================================================================================================================
@@ -88,20 +91,20 @@
         cursor: pointer;
         overflow: hidden;
         @include adaptiveValue("margin-bottom", 50, 30);
-        &::after {
-            content: "";
-            position: absolute;
-            width: 100%;
-            height: 100%;
-            top: 0;
-            left: 0;
-            background-color: $black;
-            opacity: 0.5;
-            z-index: 2;
-            transition: opacity 0.5s ease 0s;
-            pointer-events: none;
-        }
         @media (any-hover: hover) {
+            &::after {
+                content: "";
+                position: absolute;
+                width: 100%;
+                height: 100%;
+                top: 0;
+                left: 0;
+                background-color: $black;
+                z-index: 2;
+                opacity: 0.5;
+                transition: opacity 0.5s ease 0s;
+                pointer-events: none;
+            }
             &:hover {
                 &::after {
                     opacity: 0;
@@ -179,9 +182,6 @@
 //========================================================================================================================================================
 
 .aside-single {
-    &__wrapper {
-    }
-
     &__search {
         @media (min-width: $tablet) {
             @include adaptiveValue("margin-bottom", 40, 20);
@@ -189,7 +189,7 @@
     }
 
     &__price {
-        box-shadow: 1px 4px 44px rgba(0, 0, 0, 0.03);
+        box-shadow: rem(1) rem(4) rem(44) rgba(0, 0, 0, 0.03);
         @include adaptiveValue("margin-bottom", 30, 20);
     }
 
@@ -199,91 +199,97 @@
         color: $text_4;
         text-align: center;
         @media (min-width: $mobileSmall) {
-            padding: 0px 20px;
+            padding: 0px rem(20);
         }
     }
 
     &__info {
-        box-shadow: 1px 4px 44px rgba(0, 0, 0, 0.03);
+        box-shadow: rem(1) rem(4) rem(44) rgba(0, 0, 0, 0.03);
         @media (max-width: $tablet) {
             @include adaptiveValue("margin-bottom", 40, 20);
         }
     }
 }
-.search-workshop {
-    &__inner {
-    }
 
+.search-workshop {
     &__text {
         text-align: center;
         @extend %p;
         color: $text_4;
-        margin-bottom: 20px;
+        margin-bottom: rem(20);
     }
 
     &__form {
         display: flex;
         align-items: center;
+        position: relative;
+        ._input__error {
+            @extend %p;
+            color: $error;
+            @media (min-width: $mobileSmall) {
+                position: absolute;
+                margin-top: rem(5);
+                top: 100%;
+                left: 0;
+            }
+            @media (max-width: $mobileSmall) {
+                margin: rem(-10) 0 rem(5) 0;
+            }
+        }
         @media (max-width: $mobileSmall) {
             flex-wrap: wrap;
         }
     }
 
     &__input {
-        &._focus {
-            @media (min-width: $mobileSmall) {
-                border-right: none;
-            }
-        }
         @media (max-width: $tablet) {
-            min-height: 65px;
+            min-height: rem(65);
         }
         @media (min-width: $mobileSmall) {
             flex: 1 1 auto;
-            border-radius: 7px 0px 0px 7px;
+            border-radius: rem(7) 0px 0px rem(7);
             border-right: none;
         }
         @media (max-width: $mobileSmall) {
-            margin-bottom: 15px;
+            margin-bottom: rem(15);
             flex: 1 1 100%;
-            min-height: 50px;
+            min-height: rem(50);
         }
     }
 
     &__btn {
         @media (min-width: $mobileSmall) {
-            flex: 0 0 132px;
-            border-radius: 0px 7px 7px 0px;
+            flex: 0 0 rem(132);
+            border-radius: 0px rem(7) rem(7) 0px;
         }
         @media (max-width: $tablet) {
-            min-height: 65px;
+            min-height: rem(65);
         }
         @media (max-width: $mobileSmall) {
             flex: 1 1 100%;
-            min-height: 50px;
+            min-height: rem(50);
         }
     }
 }
+
 .price-workshop {
     background-color: $white;
-    &__inner {
-    }
 
     &__top {
-        border-radius: 10px 10px 0 0;
+        border-radius: rem(10) rem(10) 0 0;
         background-color: $blue;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        min-height: 80px;
-        padding: 10px 25px;
+        min-height: rem(80);
+        padding: rem(10) rem(25);
         color: $white;
         @media (max-width: em(1300)) {
-            padding: 5px 20px;
+            padding: rem(5) rem(20);
         }
         @media (max-width: $mobileSmall) {
-            padding: 5px 10px;
-            min-height: 60px;
+            padding: rem(5) rem(10);
+            min-height: rem(60);
         }
     }
 
@@ -297,69 +303,40 @@
     }
 
     &__list {
-        border: 1px solid $light;
+        border: rem(1) solid $light;
     }
 
     &__item {
         flex: 1 1 auto;
         display: flex;
         align-items: center;
-        padding: 5px 20px 5px 30px;
-        min-height: 65px;
+        gap: rem(15);
+        padding: rem(5) rem(20) rem(5) rem(30);
+        min-height: rem(65);
         &:not(:last-child) {
-            border-bottom: 1px solid $light;
+            border-bottom: rem(1) solid $light;
         }
         @media (max-width: em(1300)) {
-            padding: 5px 20px;
+            padding: rem(5) rem(20);
         }
         @media (max-width: $mobileSmall) {
-            padding: 5px 10px;
-            min-height: 60px;
+            padding: rem(5) rem(10);
+            min-height: rem(60);
         }
-    }
-
-    &__icon {
-        flex: 0 0 16px;
-        height: 16px;
-        width: 16px;
-        margin-top: 4px;
-        margin-right: 15px;
-        img {
-            max-width: 100%;
-        }
-    }
-
-    &__text {
-        display: flex;
-        justify-content: space-between;
-    }
-
-    &__check-form {
-        flex: 1 1 auto;
-    }
-    &__checkbox {
-        display: flex;
-        .checkbox__text {
-            flex: 1 1 auto;
-            .price-workshop__text {
-                flex: 1 1 auto;
-                span {
-                    margin-left: 20px;
-                    white-space: nowrap;
-                }
-            }
+        .checkbox {
+            width: 100%;
         }
     }
 
     &__total {
         background: rgba(15, 175, 233, 0.1);
-        border: 1px solid $light;
-        padding: 25px 25px 25px 30px;
+        border: rem(1) solid $light;
+        padding: rem(25) rem(25) rem(25) rem(30);
         @media (max-width: em(1300)) {
-            padding: 20px;
+            padding: rem(20);
         }
         @media (max-width: $mobileSmall) {
-            padding: 20px 10px;
+            padding: rem(20) rem(10);
         }
     }
 
@@ -384,66 +361,77 @@
         text-align: right;
         &_total {
             @extend %p-lead_bold;
-            color: #489dff;
+            color: $blue;
         }
     }
 
     &__btn-wrap {
-        padding: 25px 25px 25px 30px;
-        border: 1px solid $light;
+        padding: rem(25) rem(25) rem(25) rem(30);
+        border: rem(1) solid $light;
         border-top: none;
-        border-radius: 0px 0px 10px 10px;
+        border-radius: 0px 0px rem(10) rem(10);
         @media (max-width: em(1300)) {
-            padding: 20px;
+            padding: rem(20);
         }
         @media (max-width: $mobileSmall) {
-            padding: 10px;
+            padding: rem(10);
         }
     }
 
     &__btn {
         width: 100%;
         @media (max-width: $tablet) {
-            min-height: 65px;
+            min-height: rem(65);
+        }
+        &._inCart {
+            background-color: $error;
+            border: rem(1) solid $error;
+            @media (any-hover: hover) {
+                &:hover {
+                    background-color: rgba(255, 31, 15, 0.1);
+                    color: $error;
+                }
+            }
         }
     }
 }
-.info-workshop {
-    &__inner {
-        border-radius: 10px;
-        overflow: hidden;
-        border: 1px solid $light;
-    }
 
+.info-workshop {
+    border-radius: rem(10);
+    overflow: hidden;
+    border: rem(1) solid $light;
     &__item {
-        min-height: 65px;
-        padding: 5px 30px;
-        display: flex;
-        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
         justify-content: space-between;
+        align-items: center;
+        gap: rem(20);
+        min-height: rem(65);
+        padding: rem(5) rem(30);
         @extend %p;
+        &:not(:last-child) {
+            border-bottom: rem(1) solid $light;
+        }
         @media (max-width: em(1300)) {
-            padding: 5px 20px;
+            padding: rem(5) rem(20);
         }
         @media (max-width: $mobileSmall) {
-            padding: 5px 10px;
-            min-height: 60px;
-        }
-        &:not(:last-child) {
-            border-bottom: 1px solid $light;
+            padding: rem(5) rem(10);
+            min-height: rem(60);
         }
     }
 
     &__label {
-        flex: 0 1 50%;
         color: $text_4;
-        padding-right: 15px;
     }
 
     &__value {
         text-align: right;
-        flex: 0 1 50%;
         color: $text_1;
-        padding-left: 10px;
+        span:not(:last-child) {
+            &::after {
+                content: ", ";
+            }
+        }
     }
 }
