--- a/src/scss/footer.scss
+++ b/src/scss/footer.scss
@@ -25,11 +25,8 @@
         transition: color 0.5s ease 0s;
         span {
             display: none;
-            transition: all 0.5s ease 0s;
-            svg {
-                width: rem(20);
-                height: rem(20);
-            }
+            transition: transform 0.5s ease 0s;
+            flex: 0 0 rem(26);
         }
         &._spoller-active {
             color: $blue;
