--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -110,6 +110,7 @@ body {
 // Подключение стилей отдельных страниц
 @import "_pages/home";
 @import "_pages/single";
+@import "_pages/account";
 
 //<ОСНОВНОЙ БЛОК>====================================================================================================
 .page {
